// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTableItem should render ClayTableItem with sticker shape \`rounded\` 1`] = `
<tr class="">
  <td>
    <span class="sticker sticker-primary">
      <img alt="Image" class="img-fluid" src="image.png">
    </span>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Name">Name</span>
  </td>
</tr>
`;

exports[`ClayTableItem should render ClayTableItem with sticker with image in column 1`] = `
<tr class="">
  <td>
    <span class="sticker sticker-primary rounded-circle">
      <img alt="Image" class="img-fluid" src="image.png">
    </span>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Name">Name</span>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem disabled 1`] = `
<tr class="">
  <td>
    <div class="custom-control custom-checkbox">
      <label>
        <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only"></span>
      </label>
    </div>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">
    <a href="#1">Bar</a>
  </td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem selectable 1`] = `
<tr class="">
  <td>
    <div class="custom-control custom-checkbox">
      <label>
        <input class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only"></span>
      </label>
    </div>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">
    <a href="#1">Bar</a>
  </td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem selected 1`] = `
<tr class="table-active">
  <td>
    <div class="custom-control custom-checkbox">
      <label>
        <input checked="" class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only"></span>
      </label>
    </div>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">
    <a href="#1">Bar</a>
  </td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with action menu 1`] = `
<tr class="">
  <td>
    <div class="quick-action-menu"></div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <title>ellipsis-v</title>
          <use xlink:href="icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with columns 1`] = `
<tr class="">
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">Bar</td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with custom classes in column of \`action menu\` 1`] = `
<tr class="">
  <td class="custom-column">
    <div class="quick-action-menu"></div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <title>ellipsis-v</title>
          <use xlink:href="icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with custom classes in column of sticker 1`] = `
<tr class="">
  <td class="custom-column">
    <span class="sticker sticker-primary rounded-circle">AA</span>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Name">Name</span>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with custom classes in columns of selectable 1`] = `
<tr class="">
  <td class="custom-column">
    <div class="custom-control custom-checkbox">
      <label>
        <input class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only"></span>
      </label>
    </div>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">
    <a href="#1">Bar</a>
  </td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with custom element class 1`] = `<tr class="my-custom-class"></tr>`;

exports[`ClayTableItem should render the ClayTableItem with group 1`] = `
<tr class="table-divider">
  <td colspan="9">Group 1</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with id 1`] = `<tr class=""></tr>`;

exports[`ClayTableItem should render the ClayTableItem with input name 1`] = `
<tr class="">
  <td>
    <div class="custom-control custom-checkbox">
      <label>
        <input class="custom-control-input" name="name" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only"></span>
      </label>
    </div>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">
    <a href="#1">Bar</a>
  </td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with input value 1`] = `
<tr class="">
  <td>
    <div class="custom-control custom-checkbox">
      <label>
        <input class="custom-control-input" value="value" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only"></span>
      </label>
    </div>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Foo">Foo</span>
  </td>
  <td class="">
    <a href="#1">Bar</a>
  </td>
  <td class="">Foo</td>
  <td class="">Bar</td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with label in the column 1`] = `
<tr class="">
  <td class="">
    <span class="label label-success">Approved</span>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with progress bar in the column 1`] = `
<tr class="">
  <td class="">
    <div class="progress-group progress-info">
      <div class="progress">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" class="progress-bar" role="progressbar" style="width: 40%;"></div>
      </div>
      <div class="progress-group-addon">40%</div>
    </div>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with quick action menu 1`] = `
<tr class="">
  <td>
    <div class="quick-action-menu">
      <a class=" quick-action-item" href="#1">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
          <title>trash</title>
          <use xlink:href="icons.svg#trash"></use>
        </svg>
      </a>
      <a class=" quick-action-item" href="#2">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
          <title>download</title>
          <use xlink:href="icons.svg#download"></use>
        </svg>
      </a>
      <a class=" quick-action-item" href="#3">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
          <title>info-circle-open</title>
          <use xlink:href="icons.svg#info-circle-open"></use>
        </svg>
      </a>
    </div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <title>ellipsis-v</title>
          <use xlink:href="icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </td>
</tr>
`;

exports[`ClayTableItem should render the ClayTableItem with user sticker in the column 1`] = `
<tr class="">
  <td>
    <span class="sticker sticker-primary rounded-circle">AA</span>
  </td>
  <td class=" table-cell-content">
    <span class="text-truncate" title="Name">Name</span>
  </td>
</tr>
`;

exports[`ClayTableItem should render the default markup 1`] = `<tr class=""></tr>`;
